docs/versioned_docs/version-1.0.0/mcp/connectors.mdx
---
title: Connectors
description: Recommended MCP servers for TradingSystem and how to configure them.
tags:
  - mcp
  - github
  - postgres
  - openapi
  - docker
owner: MCPGuild
lastReviewed: '2025-10-27'
---

## Overview

This guide lists high‑value MCP servers for the TradingSystem stack and how to wire them with your environment. These servers expose core project context (files, GitHub), API contracts (OpenAPI), infra controls (Docker Compose), and data access (PostgreSQL).

Config sources:

- `.claude/mcp-servers.json` – template server definitions (project‑scoped)
- `config/mcp/servers.json` – enables the recommended set for this repo
- `.env` / `config/.env.defaults` – environment variables consumed by servers

## Servers

- Filesystem (`fs-tradingsystem`)
  - Root: `MCP_FS_ROOT` (default `.`)
  - Use cases: code search, quick edits, docs review

- GitHub (`github`)
  - Token: `GITHUB_TOKEN`
  - Scope: `MCP_GITHUB_REPO` (owner/repo) or `MCP_GITHUB_ORG`
  - Use cases: PR review, issues, release notes

- OpenAPI (`openapi-docs`)
  - Specs: `docs/static/specs/{workspace,documentation-api,tp-capital}.openapi.yaml`
  - Use cases: endpoint discovery, SDK stubs, schema Q&A

- Docker Compose (`docker-compose`)
  - Files: `tools/compose/*` (database, apps, infra, monitoring, docs)
  - Vars: `COMPOSE_PROJECT_NAME`, `DOCKER_HOST` (optional)
  - Use cases: start/stop stacks, tail logs, health checks

- PostgreSQL (`postgres-frontend-apps`)
  - URL: `MCP_POSTGRES_URL` (read‑only recommended)
  - Default example: `postgres://frontend_ro:change_me_ro@localhost:5433/trading?sslmode=disable`
  - Use cases: introspection, schema diffs, ad‑hoc diagnostics

## Environment

Add or update these variables in `.env` (see `.env.example` for placeholders):

```
MCP_FS_ROOT=.
GITHUB_TOKEN=REDACTED_GITHUB_PAT
MCP_GITHUB_REPO=marceloterra1983/TradingSystem
MCP_GITHUB_ORG=
COMPOSE_PROJECT_NAME=tradingsystem
DOCKER_HOST=
MCP_POSTGRES_URL=postgres://frontend_ro:change_me_ro@localhost:5433/trading?sslmode=disable
MCP_OPENAPI_SPECS=docs/static/specs/workspace.openapi.yaml,docs/static/specs/documentation-api.openapi.yaml,docs/static/specs/tp-capital.openapi.yaml
```

### Read-only user via Compose

- On first DB start, the init script `tools/compose/initdb/timescaledb/10-readonly-user.sh` creates `frontend_ro` with SELECT‑only grants across non‑system schemas.
- Credentials come from `.env`:
  - `FRONTEND_APPS_DB_READONLY_USER=frontend_ro`
  - `FRONTEND_APPS_DB_READONLY_PASS=change_me_ro`
- If the DB volume already exists, run the grant block manually or recreate the volume:
  - Manual: connect as superuser and re‑run the grants; then test: `psql "${MCP_POSTGRES_URL}" -c 'SELECT NOW()'`

## Import into your client

Claude Code CLI (example):

1) Install servers (adjust names to your chosen packages):

```
npm i -g mcp-server-filesystem mcp-server-github mcp-server-openapi mcp-server-docker mcp-server-postgres
```

2) Merge project template into `~/.claude.json`:

```
bash scripts/setup/mcp-config.sh > /tmp/tradingsystem.mcp.json
# open ~/.claude.json and paste servers from the output block
```

OpenAI MCP‑capable clients: import `config/mcp/servers.json` or replicate the definitions in your client’s format.

## Verification

- Filesystem: list repo root
- GitHub: fetch last 5 PRs
- OpenAPI: list paths for `workspace.openapi.yaml`
- Docker: `compose:ps` on database stack
- Postgres: `SELECT NOW()`

If a server fails to start, confirm the binary is installed and that the env vars are set; then retry.
